Add the original slope game link

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               black and white) but I have got big projects for the future of this website. There will
               be many different things here, ranging from this professional section to mini-games, 
               a more personal section closed off to most people (might learn some security while I'm
-              at it!) and more!
+              at it) and more!
             </li>
           </ul>
         </details>
@@ -102,10 +102,10 @@
           <ul>
             <li>
             <strong>Slurp :</strong>
-              A very unoriginal game about where you control a ball rolling down an infinite slope. The ball
+              A very unoriginal game where you control a ball rolling down an infinite slope. The ball
               goes faster and faster as the game progresses, and you need to evade obstacles as you roll!
 
-              This is heavily inspired from the Slope web game also using Unity.
+              This is heavily inspired from the <a target="_blank" href="https://slopegame.online/">Slope</a> web game also using Unity.
             </li>
 
             <li>
