--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 
       <ul>
         <li>My Discord handle : <span id="discord-handle">FireInsidE#0777</span> <button id="copy-discord-handle" type="button" onclick="copyText('discord-handle')">Copy!</button></li>
-        <li>My twitter account : <a href="https://twitter.com/FireInsidE_fie">@FireInsidE_fie</a></li>
+        <li>My twitter account : <a target="_blank" href="https://twitter.com/FireInsidE_fie">@FireInsidE_fie</a></li>
         <li>Contact me via <a href="mailto:firefoxSpinnie@protonmail.com">e-mail</a></li>
       </ul>
     </main>
