--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h3>Instagram projects</h3>
             <li><a href="https://www.instagram.com/drawin.at.the.campfire/">Drawin' at the Campfire [EN] (On hold)</a></li>
             <li><a href="https://www.instagram.com/shooting.firestar/">Shooting FireStar [EN] (On hold)</a></li>
-            <li><a href="https://www.instagram.com/fireoutside.fie/">FireOutsidE</a></li>
+            <li><a href="https://www.instagram.com/fireoutside.fie/">FireOutsidE [FR]</a></li>
           </div>
         </ul>
       </div>
@@ -55,7 +55,7 @@
           I am willing to carve myself a path into the freelance world, mainly in web development! I have
           also found a big interest into making games using the Unity game engine, and am currently exploring
           that other possibility as well! My mind isn't made up yet, so I'm currently doing both on my free time,
-          as my economics studies sadly take most of my time almost every week.
+          as my economics studies sadly take most of my time almost every working day.
         </p>
       </div>
 
