--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>FireInsidE's abode</title>
     <link rel="stylesheet" href="./resources/abode.css">
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap" rel="stylesheet">   <!-- Chakra Petch font -->
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
   <body>
