Modify the script so it allows for responsive design

--- a/index.html
+++ b/index.html
@@ -142,16 +142,7 @@
     <!-- Checkbox script -->
     <script>
       const links = document.getElementById("links");
-      const linksStyleOn = `
-      display: block;
-      position: absolute;
-      right: 15%;
-      border: 1px gray solid;
-      padding: 10px;
-      background-color: #3d3d3d;
-      width: 600px;
-      transition: all 0.1s ease-out;
-      `
+      const linksStyleOn = `display: block;`
 
       function displayLinks() {
         let linksStyle = getComputedStyle(links);
