Make links flex... for some reason...

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <!-- Checkbox script -->
     <script>
       const links = document.getElementById("links");
-      const linksStyleOn = `display: block;`
+      const linksStyleOn = `display: flex;`
 
       function displayLinks() {
         let linksStyle = getComputedStyle(links);
