Big links refactor

--- a/index.html
+++ b/index.html
@@ -13,38 +13,31 @@
       <h1>FIE's abode</h1>
 
       <div id="hamburger-container">
-        <input id="menu-toggle" type="checkbox" onchange="displayLinks()">
+        <input id="menu-toggle" type="checkbox" onchange="displayLinks()" />
         <label for="menu-toggle"></label>
         <span id="custom-checkbox"></span>
       </div>
 
       <div id="links">
-        <div id="links-main">
-          <ul>
-            <li><a href="./contact.html">Contact me</a></li>
-          </ul>
-        </div>
+        <ul id="links-main">
+          <li><a href="./contact.html">Contact me</a></li>
+        </ul>
 
-        <div id="links-external">
+        <ul id="links-external">
           <h2>External links</h2>
-          <ul>
-            <li><a href="https://github.com/FireInsidE-fie">My Github</a></li>
-            <li><a href="https://twitter.com/FireInsidE_fie">Twitter</a></li>
-            <li><a href="https://instagram.com/fireinside_fie">Instagram</a></li>
-            <li><a href="https://open.spotify.com/user/wlqys33u1f91ryze5fv0ocvx4?si=137492d1823c4826">Spotify</a></li>
-            <li><a href="https://twitch.tv/FireInsidE_fie">Twitch</a></li>
-          </ul>
+          <li><a href="https://github.com/FireInsidE-fie">My Github</a></li>
+          <li><a href="https://twitter.com/FireInsidE_fie">Twitter</a></li>
+          <li><a href="https://instagram.com/fireinside_fie">Instagram</a></li>
+          <li><a href="https://open.spotify.com/user/wlqys33u1f91ryze5fv0ocvx4?si=137492d1823c4826">Spotify</a></li>
+          <li><a href="https://twitch.tv/FireInsidE_fie">Twitch</a></li>
+        </ul>
           
-          <div id="links-instagram">
-            <h3>Instagram projects</h3>
-            <ul>
-              <li><a href="https://www.instagram.com/drawin.at.the.campfire/">Drawin' at the Campfire [EN] (On hold)</a></li>
-              <li><a href="https://www.instagram.com/shooting.firestar/">Shooting FireStar [EN] (On hold)</a></li>
-              <li><a href="https://www.instagram.com/fireoutside.fie/">FireOutsidE [FR]</a></li>
-            </ul>
-          </div>
-        </div>
-
+        <ul id="links-instagram">
+          <h3>Instagram projects</h3>
+          <li><a href="https://www.instagram.com/drawin.at.the.campfire/">Drawin' at the Campfire [EN] (On hold)</a></li>
+          <li><a href="https://www.instagram.com/shooting.firestar/">Shooting FireStar [EN] (On hold)</a></li>
+          <li><a href="https://www.instagram.com/fireoutside.fie/">FireOutsidE [FR]</a></li>
+        </ul>
       </div>
     </header>
 
