Make projects more readable

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <strong>Projects :</strong>
           <ul>
             <li>
-              This website : 
+              <strong>This website :</strong> 
               I made this entire website from head to toe! It may not look like much for now (lots of
               black and white) but I have got big projects for the future of this website. There will
               be many different things here, ranging from this professional section to mini-games, 
