--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>FireInsidE's abode</title>
+    <title>FIE's portfolio</title>
     <link rel="stylesheet" href="./resources/abode.css" />
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap" rel="stylesheet" />   <!-- Chakra Petch font -->
 
@@ -10,7 +10,7 @@
 
   <body>
     <header>
-      <h1>FIE's abode</h1>
+      <h1>FireInsidE's portfolio</h1>
 
       <div id="hamburger-container">
         <input id="menu-toggle" type="checkbox" onchange="displayLinks()" />
