Added latest prototype link and description

--- a/index.html
+++ b/index.html
@@ -116,6 +116,12 @@
               Disclaimer : NO visual assets (3d models, animation, etc...) for these prototypes were created by me. All of them
               were provided by Unity through their Unity Learn learning program.
             </li>
+
+            <li>
+              <a href="https://learn.unity.com/submission/6262c3d3edbc2a330eb98449"><strong>Counting prototype :</strong></a>
+                A prototype I built almost completely from scratch. You're dropped in a scene in a first person view, and
+                you must find all the planks hidden in the level. This is my most interesting and complete mini-game so far.
+            </li>
           </ul>
         </details>
 
