--- a/baguette/contact-fr.html
+++ b/baguette/contact-fr.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>FireInsidE's portfolio</title>
-    <link rel="stylesheet" href="resources/contact.css">
+    <title>Le portfolio de FIE</title>
+    <link rel="stylesheet" href="../resources/contact.css">
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap" rel="stylesheet">   <!-- Chakra Petch font -->
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
 
   <body>
     <header>
-      <h1>Contact me</h1>
+      <h1>Me contacter</h1>
       <a id="go-back-link" href="./index.html">Go back</a>
     </header>
 
