--- a/baguette/index-fr.html
+++ b/baguette/index-fr.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>FIE's portfolio</title>
-    <link rel="stylesheet" href="./resources/abode.css" />
+    <link rel="stylesheet" href="../resources/abode.css" />
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap" rel="stylesheet" />   <!-- Chakra Petch font -->
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
