Translate contact page and fix some links

--- a/baguette/contact-fr.html
+++ b/baguette/contact-fr.html
@@ -11,19 +11,19 @@
   <body>
     <header>
       <h1>Me contacter</h1>
-      <a id="go-back-link" href="./index.html">Go back</a>
+      <a id="go-back-link" href="./index-fr.html">Retour</a>
     </header>
 
     <main>
       <p>
-        You can contact me by e-mail, or, even better, by using any of my social media accounts,
-        even though I prefer Discord and Twitter.
+        Vous pouvez me contacter par e-mail, ou mieux, en utilisant un de mes réseaux sociaux,
+        de préférence Discord ou Twitter.
       </p>
 
       <ul>
-        <li>My Discord handle : <span id="discord-handle">FireInsidE#0777</span> <button id="copy-discord-handle" type="button" onclick="copyText('discord-handle')">Copy!</button></li>
-        <li>My twitter account : <a target="_blank" href="https://twitter.com/FireInsidE_fie">@FireInsidE_fie</a></li>
-        <li>Contact me via <a href="mailto:firefoxSpinnie@protonmail.com">e-mail</a></li>
+        <li>Mon pseudo Discord : <span id="discord-handle">FireInsidE#0777</span> <button id="copy-discord-handle" type="button" onclick="copyText('discord-handle')">Copier!</button></li>
+        <li>Mon compte Twitter : <a target="_blank" href="https://twitter.com/FireInsidE_fie">@FireInsidE_fie</a></li>
+        <li>Me contacter par <a href="mailto:firefoxSpinnie@protonmail.com">e-mail</a></li>
       </ul>
     </main>
 
