--- a/baguette/index-fr.html
+++ b/baguette/index-fr.html
@@ -21,7 +21,7 @@
       <div id="links">
         <ul>
           <ul id="links-main">
-            <li><a href="./contact.html">Contact me</a></li>
+            <li><a href="./contact-fr.html">Contact me</a></li>
           </ul>
   
           <ul id="links-external">
