Begin translation on main page

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           Welcome! Here you will find (almost) all relevant information about me, 
           FireInsidE or Aisling Fontaine.<br><br>
 
-          Based in Switzerland, I am a 17 years old student in economics that loves to learn new things.
+          Based in Switzerland, I am a 17 years old student that loves to learn new things.
           Some of my current interests include web programming, pixel art and streaming! I love to adapt
           to new themes, environments and more, but I specifically enjoy learning anything about computers, 
           as they have passionned me since I was little.<br><br>
