--- a/baguette/index-fr.html
+++ b/baguette/index-fr.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>FIE's portfolio</title>
+    <title>Le portfolio de FIE</title>
     <link rel="stylesheet" href="../resources/abode.css" />
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap" rel="stylesheet" />   <!-- Chakra Petch font -->
 
@@ -10,7 +10,7 @@
 
   <body>
     <header>
-      <h1>FireInsidE's portfolio</h1>
+      <h1>Le portfolio de FireInsidE</h1>
 
       <div id="hamburger-container">
         <input id="menu-toggle" type="checkbox" onchange="displayLinks()" />
@@ -21,12 +21,12 @@
       <div id="links">
         <ul>
           <ul id="links-main">
-            <li><a href="./contact-fr.html">Contact me</a></li>
+            <li><a href="./contact-fr.html">Me contacter</a></li>
           </ul>
   
           <ul id="links-external">
-            <h2>External links</h2>
-            <li><a href="https://github.com/FireInsidE-fie">My Github</a></li>
+            <h2>Liens externes</h2>
+            <li><a href="https://github.com/FireInsidE-fie">Mon Github</a></li>
             <li><a href="https://twitter.com/FireInsidE_fie">Twitter</a></li>
             <li><a href="https://instagram.com/fireinside_fie">Instagram</a></li>
             <li><a href="https://open.spotify.com/user/wlqys33u1f91ryze5fv0ocvx4?si=137492d1823c4826">Spotify</a></li>
@@ -34,9 +34,9 @@
           </ul>
             
           <ul id="links-instagram">
-            <h3>Instagram projects</h3>
-            <li><a href="https://www.instagram.com/drawin.at.the.campfire/">Drawin' at the Campfire [EN] <br />(On hold)</a></li>
-            <li><a href="https://www.instagram.com/shooting.firestar/">Shooting FireStar [EN] <br />(On hold)</a></li>
+            <h3>Projects Instagram</h3>
+            <li><a href="https://www.instagram.com/drawin.at.the.campfire/">Drawin' at the Campfire [EN] <br />(En pause)</a></li>
+            <li><a href="https://www.instagram.com/shooting.firestar/">Shooting FireStar [EN] <br />(En pause)</a></li>
             <li><a href="https://www.instagram.com/fireoutside.fie/">FireOutsidE [FR]</a></li>
           </ul>          
         </ul>
@@ -46,13 +46,16 @@
     <main>
       <div id="introduction">
         <p>
-          Welcome! Here you will find (almost) all relevant information about me, 
-          FireInsidE or Aisling Fontaine.<br><br>
+          Bienvenue! Sur ce site, vous trouverez presque toutes les informations professionnelles importantes
+          me concernant, moi Aisling Fontaine, alias FireInsidE.<br><br>
 
           Based in Switzerland, I am a 17 years old student in economics that loves to learn new things.
           Some of my current interests include web programming, pixel art and streaming! I love to adapt
           to new themes, environments and more, but I specifically enjoy learning anything about computers, 
           as they have passionned me since I was little.<br><br>
+
+          Installé en Suisse, je suis un étudiant de 17 ans qui aime toujours apprendre de nouvelles choses.
+          
 
           I am willing to carve myself a path into the freelance world, mainly in web development! I have
           also found a big interest into making games using the Unity game engine, and am currently exploring
