--- a/baguette/index-fr.html
+++ b/baguette/index-fr.html
@@ -49,13 +49,11 @@
           Bienvenue! Sur ce site, vous trouverez presque toutes les informations professionnelles importantes
           me concernant, moi Aisling Fontaine, alias FireInsidE.<br><br>
 
-          Based in Switzerland, I am a 17 years old student in economics that loves to learn new things.
-          Some of my current interests include web programming, pixel art and streaming! I love to adapt
-          to new themes, environments and more, but I specifically enjoy learning anything about computers, 
-          as they have passionned me since I was little.<br><br>
-
           Installé en Suisse, je suis un étudiant de 17 ans qui aime toujours apprendre de nouvelles choses.
-          
+          Quelques-uns de mes intérêts du moment sont le développement web, le développement de jeux vidéo
+          ainsi que le streaming! J'ai de la facilité à m'adapter à de nouvelles thématiques, environnements
+          ou autres, mais j'ai tendance à particulièrement aimer apprendre tout ce qui touche aux ordinateurs,
+          ceux-ci m'ayant intéressé depuis que j'étais très jeune.<br><br>
 
           I am willing to carve myself a path into the freelance world, mainly in web development! I have
           also found a big interest into making games using the Unity game engine, and am currently exploring
