--- a/baguette/index-fr.html
+++ b/baguette/index-fr.html
@@ -55,34 +55,37 @@
           ou autres, mais j'ai tendance à particulièrement aimer apprendre tout ce qui touche aux ordinateurs,
           ceux-ci m'ayant intéressé depuis que j'étais très jeune.<br><br>
 
-          I am willing to carve myself a path into the freelance world, mainly in web development! I have
-          also found a big interest into making games using the Unity game engine, and am currently exploring
-          that other possibility as well! My mind isn't made up yet, so I'm currently doing both on my free time,
-          as my economics studies sadly take most of my time almost every working day.
+          Je vise à me créer une carrière dans le monde de la freelance, principalement dans le développement web!
+          Je me suis aussi trouvé une passion pour le game dev avec le moteur Unity, donc je suis également en train d'explorer
+          cet autre aspect en ce moment. Je n'ai pas encore tout à fait décidé de quoi sera fait mon avenir, donc 
+          je travaille sur les deux à la fois dans mon temps libre, car mes études monopolent malheureusement la majorité
+          de mes journées de semaine.
         </p>
       </div>
 
       <div id="skills">
-        <h2>My skills</h2>
+        <h2>Mes compétences</h2>
         <p>
-          I love learning new things, so whenever I encounter something new that sounds exciting to me,
-          I might add it here!<br>
-          You will also find my public projects down below!
+          J'aime apprendre de nouvelles choses, donc quand je découvre un nouveau domaine qui me passionne,
+          je l'ajouterai probablement dans cette section!<br>
+
+          Vous trouverez également ci-dessous quelques liens pour mes projects publiquement disponibles.
         </p>
 
         <details id="front-end">
-          <summary>Front-end web development</summary>
+          <summary>Développement web front-end</summary>
           <p>
-            I am able to make a simple website 
-            (in fact, this was entirely created by yours truly!) using <em>HTML</em> and <em>CSS</em>, 
-            as well as some <em>JavaScript</em> (check out the links in the top right of this web page)!
+            Je suis capable de faire un site basique (je me suis occupé de la construction de ce site
+            du début à la fin, et il est toujours en développement à ce jour) en utilisant du code <em>HTML</em>,
+            <em>CSS</em> ainsi qu'un peu de <em>JavaScript</em> (pensez à jeter un oeil aux liens en haut à
+            droite de cette page)!
           </p>
           <br>
 
-          <strong>Projects :</strong>
+          <strong>Projets :</strong>
           <ul>
             <li>
-              <strong>This website :</strong> 
+              <strong>Ce site :</strong> 
               I made this entire website from head to toe! It may not look like much for now (lots of
               black and white) but I have got big projects for the future of this website. There will
               be many different things here, ranging from this professional section to mini-games, 
