Two paragraphs translated

--- a/baguette/index-fr.html
+++ b/baguette/index-fr.html
@@ -85,12 +85,12 @@
           <strong>Projets :</strong>
           <ul>
             <li>
-              <strong>Ce site :</strong> 
-              I made this entire website from head to toe! It may not look like much for now (lots of
-              black and white) but I have got big projects for the future of this website. There will
-              be many different things here, ranging from this professional section to mini-games, 
-              a more personal section closed off to most people (might learn some security while I'm
-              at it) and more!
+              <strong>Ce site :</strong>
+              J'ai créé ce site internet de fond en comple! Il parait assez simple dans son état actual,
+              mais j'ai de grands projets pour le futur de cette page. Il y aura beaucoup de parties différentes,
+              que ce soit la partie plus professionnelle que vous avez sous les yeux, des mini-jeux créés par
+              mes soins, une section personnelle fermée au grand public (ce qui me permettrait d'apprendre
+              un peu de sécurité en passant) et plus encore!
             </li>
           </ul>
         </details>
@@ -98,13 +98,12 @@
         <details id="unity">
           <summary>Game dev</summary>
           <p>
-            I can navigate the Unity interface and understand some of 
-            the basic functions of the engine.<br>
-            I can implement player controls and basic physics. 
+            Je suis capable de naviguer à travers l'interface d'Unity et de créer quelques projets basiques.<br>
+            Je suis capable d'implémenter une interface, des contrôles et de la physique simples.
           </p>
           <br>
 
-          <strong>Projects :</strong>
+          <strong>Projets :</strong>
           <ul>
             <li>
             <strong>Slurp :</strong>
