Finish project section translating

--- a/baguette/index-fr.html
+++ b/baguette/index-fr.html
@@ -107,23 +107,25 @@
           <ul>
             <li>
             <strong>Slurp :</strong>
-              A very unoriginal game where you control a ball rolling down an infinite slope. The ball
-              goes faster and faster as the game progresses, and you need to evade obstacles as you roll!
+              Un jeu très peu original dans lequel vous controllez une balle qui roule en bas d'une pente infinie.
+              La balle accèlère avec le temps, et vous devez éviter les obstacles tout au long du parcours!
 
-              This is heavily inspired from the <a target="_blank" href="https://slopegame.online/">Slope</a> web game also using Unity.
+              Ce jeu est fortement inspiré de celui nommé <a target="_blank" href="https://slopegame.online/">"Slope"</a>, un autre jeu créé avec Unity.
             </li>
 
             <li>
-              <strong>Learning prototypes :</strong>
-              You can find an archive containing all of my prototype unity projects so far <a target="_blank" href="https://drive.google.com/file/d/12U8mPM0MHXO76x2BjoFjs6jFg3Ckm62H/view?usp=sharing">here</a>.<br>
-              Disclaimer : NO visual assets (3d models, animation, etc...) for these prototypes were created by me. All of them
-              were provided by Unity through their Unity Learn learning program.
+              <strong>Prototypes d'apprentissage :</strong>
+              Vous pouvez trouver une archive contenant tous mes prototypes de projets réalisés sur Unity jusqu'à présent
+              <a target="_blank" href="https://drive.google.com/file/d/12U8mPM0MHXO76x2BjoFjs6jFg3Ckm62H/view?usp=sharing">ici</a>.
+              Information importante : AUCUN des composants visuels (modèles 3D, animations, etc) n'a été créé par moi-même.
+              Chacun d'entre-eux a été fourni par Unity au travers de leur programme d'apprentissage Unity Learn.
             </li>
 
             <li>
-              <a href="https://learn.unity.com/submission/6262c3d3edbc2a330eb98449"><strong>Counting prototype :</strong></a>
-                A prototype I built almost completely from scratch. You're dropped in a scene in a first person view, and
-                you must find all the planks hidden in the level. This is my most interesting and complete mini-game so far.  
+              <a href="https://learn.unity.com/submission/6262c3d3edbc2a330eb98449"><strong>Prototype de comptage :</strong></a>
+                Un autre prototype que j'ai créé presque complétement de toutes pièces. Vous êtes placés dans une scène
+                dans une vue à la première personne et vous devez trouver toutes les planches cachées à travers
+                la scène. C'est, selon moi, le prototype le plus intéressant et complet que j'aie créé.
             </li>
           </ul>
         </details>
@@ -131,7 +133,7 @@
         <details id="rust">
           <summary>Rust</summary>
           <p>
-            I know some basics of using the <a href="https://www.rust-lang.org/">Rust</a> programming language.
+            Je connais quelques bases du language de programmation <a href="https://www.rust-lang.org/">Rust</a>.
           </p>
         </details>
       </div>
