--- a/baguette/index-fr.html
+++ b/baguette/index-fr.html
@@ -139,11 +139,10 @@
       </div>
 
       <div id="working-on">
-        <h2>What I've been up to</h2>
+        <h2>Ce sur quoi je travaille actuellement</h2>
         <ul>
-          <li>Learning full-stack web development </li>
-          <li>Learning to make games using Unity</li>
-          <li>Learning pixel art (check out my <a href="https://twitter.com/Fireinside_fie">Twitter</a>!)</li>
+          <li>Apprendre le développement web</li>
+          <li>Apprendre à créer des jeux avec Unity</li>
           <li>Playing video games, obviously</li>
           <li>Trying out live streaming on <a href="https://twitch.tv/FireInsidE_fie">Twitch</a></li>
         </ul>
