--- a/baguette/index-fr.html
+++ b/baguette/index-fr.html
@@ -143,8 +143,8 @@
         <ul>
           <li>Apprendre le développement web</li>
           <li>Apprendre à créer des jeux avec Unity</li>
-          <li>Playing video games, obviously</li>
-          <li>Trying out live streaming on <a href="https://twitch.tv/FireInsidE_fie">Twitch</a></li>
+          <li>Jouer auxdits jeux-vidéos</li>
+          <li>Essayer le streaming sur <a href="https://twitch.tv/FireInsidE_fie">Twitch</a></li>
         </ul>
       </div>
     </main>
