Add links to change languages

--- a/baguette/index-fr.html
+++ b/baguette/index-fr.html
@@ -21,6 +21,7 @@
       <div id="links">
         <ul>
           <ul id="links-main">
+            <li>Langue du site : Français [FR] | <a href="../index.html">English [EN]</a></li>
             <li><a href="./contact-fr.html">Me contacter</a></li>
           </ul>
   
