--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <div id="links">
         <ul>
           <ul id="links-main">
+            <li>Langue du site : English [EN] | <a href="./baguette/index-fr.html">Français [FR]</a></li>
             <li><a href="./contact.html">Contact me</a></li>
           </ul>
   
