--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h2>External links</h2>
             <li><a href="https://github.com/FireInsidE-fie">My Github</a></li>
             <li><a href="https://twitter.com/FireInsidE_fie">Twitter</a></li>
-            <li><a href="https://instagram.com/fireinside_fie">Instagram</a></li>
+            <li><a href="https://instagram.com/fireinside.fie">Instagram</a></li>
             <li><a href="https://open.spotify.com/user/wlqys33u1f91ryze5fv0ocvx4?si=137492d1823c4826">Spotify</a></li>
             <li><a href="https://twitch.tv/FireInsidE_fie">Twitch</a></li>
           </ul>
