ShootingFireStar not on hold anymore!!

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <ul id="links-instagram">
             <h3>Instagram projects</h3>
             <li><a href="https://www.instagram.com/drawin.at.the.campfire/">Drawin' at the Campfire [EN] <br />(On hold)</a></li>
-            <li><a href="https://www.instagram.com/shooting.firestar/">Shooting FireStar [EN] <br />(On hold)</a></li>
+            <li><a href="https://www.instagram.com/shooting.firestar/">Shooting FireStar [EN]</a></li>
             <li><a href="https://www.instagram.com/fireoutside.fie/">FireOutsidE [FR]</a></li>
           </ul>          
         </ul>
