--- a/index.html
+++ b/index.html
@@ -135,12 +135,13 @@
       </div>
 
       <div id="working-on">
-        <h2>What I've been up to</h2>
+        <h2>What I've been up to (Last updated : 01.06.2022) </h2>
         <ul>
-          <li>Learning full-stack web development </li>
-          <li>Learning to make games using Unity</li>
+          <li>Learning full-stack web development (React, Redux, Reddit Project in the works)</li>
+          <li>Building a discord bot</li>
+          <li>Creating characters to put in a future multimedia universe</li>
           <li>Playing video games, obviously</li>
-          <li>Trying out live streaming on <a href="https://twitch.tv/FireInsidE_fie">Twitch</a></li>
+          <li>Getting back into character drawing (still really bad at it)</li>
         </ul>
       </div>
     </main>
