Finish update of "working on"

--- a/baguette/index-fr.html
+++ b/baguette/index-fr.html
@@ -140,12 +140,13 @@
       </div>
 
       <div id="working-on">
-        <h2>Ce sur quoi je travaille actuellement</h2>
+        <h2>Ce sur quoi je travaille actuellement (Dernière update : 01.06.2022)</h2>
         <ul>
           <li>Apprendre le développement web</li>
-          <li>Apprendre à créer des jeux avec Unity</li>
-          <li>Jouer auxdits jeux-vidéos</li>
-          <li>Essayer le streaming sur <a href="https://twitch.tv/FireInsidE_fie">Twitch</a></li>
+          <li>Créer un bot discord en JavaScript</li>
+          <li>Créer des personnages pour un futur univers multimédia</li>
+          <li>Jouer aux jeux-vidéos, bien évidemment</li>
+          <li>Réessayer le dessin de personnages (j'y suis toujours nul)</li>
         </ul>
       </div>
     </main>
