--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <h2>What I've been up to (Last updated : 01.06.2022) </h2>
         <ul>
           <li>Learning full-stack web development (React, Redux, Reddit Project in the works)</li>
-          <li>Building a discord bot</li>
+          <li>Building a discord bot using JavaScript</li>
           <li>Creating characters to put in a future multimedia universe</li>
           <li>Playing video games, obviously</li>
           <li>Getting back into character drawing (still really bad at it)</li>
