--- a/baguette/contact-fr.html
+++ b/baguette/contact-fr.html
@@ -23,7 +23,7 @@
       <ul>
         <li>Mon pseudo Discord : <span id="discord-handle">FireInsidE#0777</span> <button id="copy-discord-handle" type="button" onclick="copyText('discord-handle')">Copier!</button></li>
         <li>Mon compte Twitter : <a target="_blank" href="https://twitter.com/FireInsidE_fie">@FireInsidE_fie</a></li>
-        <li>Me contacter par <a href="mailto:firefoxSpinnie@protonmail.com">e-mail</a></li>
+        <li>Me contacter par <a href="mailto:aisling.fontaine@protonmail.com">e-mail</a></li>
       </ul>
     </main>
 
