--- a/baguette/index-fr.html
+++ b/baguette/index-fr.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Le portfolio de FIE</title>
+    <title>Le portfolio de Ash</title>
     <link rel="stylesheet" href="../resources/abode.css" />
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap" rel="stylesheet" />   <!-- Chakra Petch font -->
 
@@ -10,7 +10,7 @@
 
   <body>
     <header>
-      <h1>Le portfolio de FireInsidE</h1>
+      <h1>Le portfolio de Aisling Fontaine</h1>
 
       <div id="hamburger-container">
         <input id="menu-toggle" type="checkbox" onchange="displayLinks()" />
@@ -35,7 +35,7 @@
           </ul>
             
           <ul id="links-instagram">
-            <h3>Projects Instagram</h3>
+            <h3>Projets Instagram</h3>
             <li><a href="https://www.instagram.com/drawin.at.the.campfire/">Drawin' at the Campfire [EN] <br />(En pause)</a></li>
             <li><a href="https://www.instagram.com/shooting.firestar/">Shooting FireStar [EN] <br />(En pause)</a></li>
             <li><a href="https://www.instagram.com/fireoutside.fie/">FireOutsidE [FR]</a></li>
@@ -50,25 +50,26 @@
           Bienvenue! Sur ce site, vous trouverez presque toutes les informations professionnelles importantes
           me concernant, moi Aisling Fontaine, alias FireInsidE.<br><br>
 
-          Installé en Suisse, je suis un étudiant de 17 ans qui aime toujours apprendre de nouvelles choses.
-          Quelques-uns de mes intérêts du moment sont le développement web, le développement de jeux vidéo
-          ainsi que le streaming! J'ai de la facilité à m'adapter à de nouvelles thématiques, environnements
-          ou autres, mais j'ai tendance à particulièrement aimer apprendre tout ce qui touche aux ordinateurs,
-          ceux-ci m'ayant intéressé depuis que j'étais très jeune.<br><br>
+          Installé en Suisse, je suis un étudiant de 17 ans qui aime apprendre de nouvelles choses.
+          Certains de mes intérêts du moment sont l'écriture, la musique ainsi que l'informatique
+          sous toutes ses déclinaisons! La cybersécurité est mon principal vecteur d'apprentissage
+          du moment, mais je m'intéresse à tout.
+          J'ai de la facilité à m'adapter à de nouvelles thématiques, environnements ou autres, 
+          mais j'ai tendance à particulièrement aimer apprendre tout ce qui touche aux ordinateurs,
+          ceux-ci m'ayant intéressé depuis très jeune encore.<br><br>
 
-          Je vise à me créer une carrière dans le monde de la freelance, principalement dans le développement web!
-          Je me suis aussi trouvé une passion pour le game dev avec le moteur Unity, donc je suis également en train d'explorer
-          cet autre aspect en ce moment. Je n'ai pas encore tout à fait décidé de quoi sera fait mon avenir, donc 
-          je travaille sur les deux à la fois dans mon temps libre, car mes études monopolent malheureusement la majorité
-          de mes journées de semaine.
+          Je vise à me créer une carrière dans le monde de la cybersécurité ou de l'écriture.
+          Beaucoup de domaines m'intéressent ou m'ont interessé, il est donc fréquent pour moi
+          de vouloir essayer de nouvelles choses afin de trouver de quoi mon avenir professionnel
+          sera fait.
         </p>
       </div>
 
       <div id="skills">
         <h2>Mes compétences</h2>
         <p>
-          J'aime apprendre de nouvelles choses, donc quand je découvre un nouveau domaine qui me passionne,
-          je l'ajouterai probablement dans cette section!<br>
+          J'aime apprendre de nouvelles choses, donc lorsque je découvre un nouveau domaine qui me passionne,
+          à l'avenir je l'ajouterai probablement dans cette section!<br>
 
           Vous trouverez également ci-dessous quelques liens pour mes projects publiquement disponibles.
         </p>
@@ -96,57 +97,24 @@
           </ul>
         </details>
 
-        <details id="unity">
-          <summary>Game dev</summary>
+        <details>
+          <summary>Cybersécurité</summary>
           <p>
-            Je suis capable de naviguer à travers l'interface d'Unity et de créer quelques projets basiques.<br>
-            Je suis capable d'implémenter une interface, des contrôles et de la physique simples.
-          </p>
-          <br>
-
-          <strong>Projets :</strong>
-          <ul>
-            <li>
-            <strong>Slurp :</strong>
-              Un jeu très peu original dans lequel vous controllez une balle qui roule en bas d'une pente infinie.
-              La balle accèlère avec le temps, et vous devez éviter les obstacles tout au long du parcours!
-
-              Ce jeu est fortement inspiré de celui nommé <a target="_blank" href="https://slopegame.online/">"Slope"</a>, un autre jeu créé avec Unity.
-            </li>
-
-            <li>
-              <strong>Prototypes d'apprentissage :</strong>
-              Vous pouvez trouver une archive contenant tous mes prototypes de projets réalisés sur Unity jusqu'à présent
-              <a target="_blank" href="https://drive.google.com/file/d/12U8mPM0MHXO76x2BjoFjs6jFg3Ckm62H/view?usp=sharing">ici</a>.
-              Information importante : AUCUN des composants visuels (modèles 3D, animations, etc) n'a été créé par moi-même.
-              Chacun d'entre-eux a été fourni par Unity au travers de leur programme d'apprentissage Unity Learn.
-            </li>
-
-            <li>
-              <a href="https://learn.unity.com/submission/6262c3d3edbc2a330eb98449"><strong>Prototype de comptage :</strong></a>
-                Un autre prototype que j'ai créé presque complétement de toutes pièces. Vous êtes placés dans une scène
-                dans une vue à la première personne et vous devez trouver toutes les planches cachées à travers
-                la scène. C'est, selon moi, le prototype le plus intéressant et complet que j'aie créé.
-            </li>
-          </ul>
-        </details>
-
-        <details id="rust">
-          <summary>Rust</summary>
-          <p>
-            Je connais quelques bases du language de programmation <a href="https://www.rust-lang.org/">Rust</a>.
+            Depuis peu, je me suis mis à étudier la cybersécurité en apprenant l'attaque sur HackTheBox,
+            une plateforme d'apprentissage en ligne. J'ai déjà récolté quelques bases théoriques et pratiques,
+            et je compte bien continuer à apprendre pour m'améliorer et potentiellement en faire mon futur
+            travail.
           </p>
         </details>
       </div>
 
       <div id="working-on">
-        <h2>Ce sur quoi je travaille actuellement (Dernière update : 01.06.2022)</h2>
+        <h2>Ce sur quoi je travaille actuellement (Dernière mise-à-jour : 22.09.2022)</h2>
         <ul>
-          <li>Apprendre le développement web</li>
-          <li>Créer un bot discord en JavaScript</li>
-          <li>Créer des personnages pour un futur univers multimédia</li>
-          <li>Jouer aux jeux-vidéos, bien évidemment</li>
-          <li>Réessayer le dessin de personnages (j'y suis toujours nul)</li>
+          <li>Apprentissage de la cybersécurité</li>
+          <li>Composition de musiques très basiques</li>
+          <li>Création et écriture de personnages en vue d'un futur univers multimédia</li>
+          <li>Continuation de mes études en école de commerce</li>
         </ul>
       </div>
     </main>
