English update and fixes

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>FireInsidE's portfolio</title>
+    <title>Ash's portfolio</title>
     <link rel="stylesheet" href="resources/contact.css">
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap" rel="stylesheet">   <!-- Chakra Petch font -->
 
@@ -17,13 +17,13 @@
     <main>
       <p>
         You can contact me by e-mail, or, even better, by using any of my social media accounts,
-        even though I prefer Discord and Twitter.
+        though I prefer Discord and Twitter.
       </p>
 
       <ul>
         <li>My Discord handle : <span id="discord-handle">FireInsidE#0777</span> <button id="copy-discord-handle" type="button" onclick="copyText('discord-handle')" title="Copy my discord handle">Copy!</button></li>
         <li>My twitter account : <a target="_blank" href="https://twitter.com/FireInsidE_fie">@FireInsidE_fie</a></li>
-        <li>Contact me via <a href="mailto:firefoxSpinnie@protonmail.com">e-mail</a></li>
+        <li>Contact me via <a href="mailto:aisling.fontaine@protonmail.com">e-mail</a></li>
       </ul>
     </main>
 
