--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>FIE's portfolio</title>
+    <title>Ash's portfolio</title>
     <link rel="stylesheet" href="./resources/abode.css" />
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap" rel="stylesheet" />   <!-- Chakra Petch font -->
 
@@ -10,7 +10,7 @@
 
   <body>
     <header>
-      <h1>FireInsidE's portfolio</h1>
+      <h1>Aisling Fontaine's portfolio</h1>
 
       <div id="hamburger-container">
         <input id="menu-toggle" type="checkbox" onchange="displayLinks()" />
@@ -37,7 +37,7 @@
           <ul id="links-instagram">
             <h3>Instagram projects</h3>
             <li><a href="https://www.instagram.com/drawin.at.the.campfire/">Drawin' at the Campfire [EN] <br />(On hold)</a></li>
-            <li><a href="https://www.instagram.com/shooting.firestar/">Shooting FireStar [EN]</a></li>
+            <li><a href="https://www.instagram.com/shooting.firestar/">Shooting FireStar [EN] <br />(On hold)</a></li>
             <li><a href="https://www.instagram.com/fireoutside.fie/">FireOutsidE [FR]</a></li>
           </ul>          
         </ul>
@@ -51,14 +51,14 @@
           FireInsidE or Aisling Fontaine.<br><br>
 
           Based in Switzerland, I am a 17 years old student that loves to learn new things.
-          Some of my current interests include web programming, game dev and streaming! I love to adapt
+          Some of my current interests include cybersecurity, music and writing! I love to adapt
           to new themes, environments and more, but I specifically enjoy learning anything about computers, 
           as they have passionned me since I was little.<br><br>
 
-          I am willing to carve myself a path into the freelance world, mainly in web development! I have
-          also found a big interest into making games using the Unity game engine, and am currently exploring
-          that other possibility as well! My mind isn't made up yet, so I'm currently doing both on my free time,
-          as my studies sadly take most of my time almost every working day.
+          I am willing to carve myself a path into the cybersecurity space, maybe as a freelancer. I recently
+          started writing again, and am working on building my very own multimedia universe based on stories,
+          animation films and more! Many different areas interest me, so I am constantly trying new things
+          out to see which might become my future work! 
         </p>
       </div>
 
@@ -92,56 +92,24 @@
           </ul>
         </details>
 
-        <details id="unity">
-          <summary>Game dev</summary>
+        <details>
+          <summary>Cybersecurity</summary>
           <p>
-            I can navigate the Unity interface and understand some of 
-            the basic functions of the engine.<br>
-            I can implement player controls and basic physics. 
-          </p>
-          <br>
-
-          <strong>Projects :</strong>
-          <ul>
-            <li>
-            <strong>Slurp :</strong>
-              A very unoriginal game where you control a ball rolling down an infinite slope. The ball
-              goes faster and faster as the game progresses, and you need to evade obstacles as you roll!
-
-              This is heavily inspired from the <a target="_blank" href="https://slopegame.online/">Slope</a> web game also using Unity.
-            </li>
-
-            <li>
-              <strong>Learning prototypes :</strong>
-              You can find an archive containing all of my prototype unity projects so far <a target="_blank" href="https://drive.google.com/file/d/12U8mPM0MHXO76x2BjoFjs6jFg3Ckm62H/view?usp=sharing">here</a>.<br>
-              Disclaimer : NO visual assets (3d models, animation, etc...) for these prototypes were created by me. All of them
-              were provided by Unity through their Unity Learn learning program.
-            </li>
-
-            <li>
-              <a href="https://learn.unity.com/submission/6262c3d3edbc2a330eb98449"><strong>Counting prototype :</strong></a>
-                A prototype I built almost completely from scratch. You're dropped in a scene in a first person view, and
-                you must find all the planks hidden in the level. This is my most interesting and complete mini-game so far.  
-            </li>
-          </ul>
-        </details>
-
-        <details id="rust">
-          <summary>Rust</summary>
-          <p>
-            I know some basics of using the <a href="https://www.rust-lang.org/">Rust</a> programming language.
+            I recently started learning cybersecurity using HackTheBox, an online learning platform that
+            allows me to perfect my theory and practical skills by attacking virtual targets and finding
+            their vulnerabilities. I will keep working to enhance my skills in this area to potentially
+            make it my future job.
           </p>
         </details>
       </div>
 
       <div id="working-on">
-        <h2>What I've been up to (Last updated : 01.06.2022) </h2>
+        <h2>What I've been up to (Last updated : 22.09.2022) </h2>
         <ul>
-          <li>Learning full-stack web development (React, Redux, Reddit Project in the works)</li>
-          <li>Building a discord bot using JavaScript</li>
-          <li>Creating characters to put in a future multimedia universe</li>
-          <li>Playing video games, obviously</li>
-          <li>Getting back into character drawing (still really bad at it)</li>
+          <li>Learning cybersecurity on HackTheBox</li>
+          <li>Learning to compose music</li>
+          <li>Building a multimedia universe of character in a sci-fi world</li>
+          <li>Continuation of economy studies</li>
         </ul>
       </div>
     </main>
