--- a/baguette/contact-fr.html
+++ b/baguette/contact-fr.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Le portfolio de FIE</title>
+    <title>Le portfolio de Ash</title>
     <link rel="stylesheet" href="../resources/contact.css">
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap" rel="stylesheet">   <!-- Chakra Petch font -->
 
